--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,8 @@
         android:layout_width="152dp"
         android:layout_height="45dp"
         android:layout_marginTop="16dp"
+        android:inputType="text"
+        android:maxLines="1"
         android:hint="Add task"
         android:textAlignment="center"
         app:layout_constraintEnd_toStartOf="@+id/Spinnersecond"
@@ -44,6 +46,8 @@
         android:layout_height="46dp"
         android:layout_marginTop="8dp"
         android:hint="Add Category"
+        android:inputType="text"
+        android:maxLines="1"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.398"
